Fixed alignment issues with homepage items

--- a/src/css/card.css
+++ b/src/css/card.css
@@ -15,12 +15,16 @@
 }
 
 .hero {
-    width: 100%;
+    /* width: 100%; */
     height: 200px;
 }
 
 .wide > .hero {
     height: 268px;
+}
+
+.card > h3 {
+    font-size: var(--fontSize-3);
 }
 
 .overlay {
